# 408bot

./: .gitignore  README.md  TODO.md  agent_spec.md
backend/: config.yaml  config.yaml.example  pyproject.toml  test_parser.py
backend/app/: __init__.py  agent.py  config.py  llm_factory.py  main.py
backend/app/api/: exam.py  graph.py  knowledge.py  mistakes.py  practice.py
backend/app/models/: __init__.py  chunk.py  graph.py  mistake.py
backend/app/skills/: __init__.py  agentic_rag_skill.py  answer_generation_skill.py  base_skill.py  docx_generation_skill.py  knowledge_graph_skill.py  knowledge_retrieval_skill.py  question_location_skill.py  quiz_generation_skill.py  smart_answer_skill.py
backend/app/utils/: db_migrations.py  dependencies.py  embeddings.py  exceptions.py  logging.py  ocr.py  question_parser.py
backend/data/: ingestion_stats.json
backend/data/graph/: knowledge_graph.json
backend/data_process/: config.py  data_preprocessing_spec.md  pyproject.toml
backend/data_process/processed/: ds_chunks.json  processing_summary.json
backend/scripts/: build_graph.py  ingest_chunks.py  test_llms.py
data_process/: __init__.py  config.py  pdf_processor.py  requirements.txt  utils.py
doc/: STARTUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  SubjectPicker.tsx
frontend/src/hooks/: useLoading.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: ExamPage.tsx  (+4 more)
processed/: cn_chunks.json  co_chunks.json  ds_chunks.json  os_chunks.json
(+5 files in other folders)
